Se agrego para compromiso y trabaja

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,3 +12,9 @@
 
 // Page Nosotros
 @import "nosotros/nosotros";
+
+// Page Trabaja con Nosotros
+@import "trabaja/trabaja";
+
+// Page Compromiso con el planeta
+@import "compromiso/compromiso";
