--- a/assets/scss/home/_home-video.scss
+++ b/assets/scss/home/_home-video.scss
@@ -27,14 +27,15 @@
     &__logo {
       width: 75px;
       img {
-        @media (max-width: 991px) {
-          height: 58px;
-          width: auto;
-        }
+        // @media (max-width: 991px) {
+        height: 58px;
+        width: auto;
+        // }
       }
     }
     &__title {
-      margin-top: 24px;
+      // margin-top: 24px;
+      margin-top: 16px;
       [class*="heading-title"] {
         @media (max-width: 991px) {
           font-size: 16px;
@@ -67,7 +68,8 @@
     }
 
     @media (min-width: 768px) {
-      height: 33.3333%;
+      // height: 33.3333%;
+      height: 100%;
     }
   }
 
@@ -132,6 +134,7 @@
       // margin: auto;
     }
     @media (min-width: 1200px) {
+      height: 215px;
       width: 992px;
     }
     @media (min-width: 1400px) {
