--- a/assets/scss/trabaja/_convocatorias.scss
+++ b/assets/scss/trabaja/_convocatorias.scss
@@ -1,4 +1,5 @@
-#convocatorias {
+#convocatorias,
+#convocatorias2 {
   // #convocatorias div:has(>.convocatorias-disponibles)
   div:has(> .convocatorias-disponibles) {
     @media (max-width: 767px) {
@@ -38,6 +39,10 @@
         background: $amarillo-sorsa;
         box-shadow: 7px 10px 15px 0px rgba(0, 0, 0, 0.26666666666666666);
       }
+    }
+
+    &:hover {
+      color: initial;
     }
   }
 }
