--- a/assets/scss/nosotros/_nosotros-historia.scss
+++ b/assets/scss/nosotros/_nosotros-historia.scss
@@ -4,11 +4,12 @@
   .artech-feature-card {
     &.num {
       .num {
-        width: 40px;
-        height: 40px;
+        width: 46px;
+        height: 46px;
         display: flex;
         align-items: center;
         justify-content: center;
+        font-size: 16px;
       }
     }
   }
