--- a/assets/scss/home/_home-noticias.scss
+++ b/assets/scss/home/_home-noticias.scss
@@ -1,5 +1,5 @@
 #home-noticias {
-  a[href*="https://corporativa.sorsa.pe/"]
+  a[href*="https://sorsa.sorsa.pe/"]
   {
     pointer-events: none;
   }
