se soluciono el error de slider final del home

--- a/assets/scss/home/_home-noticias.scss
+++ b/assets/scss/home/_home-noticias.scss
@@ -4,7 +4,7 @@
     pointer-events: none;
   }
 
-  :not(:has([data-sorsa-noticias])) {
-    display: none !important;
+  &:not(:has([data-sorsa-noticias])) {
+    display: none !important; 
   }
 }
